Disable file deletion on Android / Termux
trash-rs is currently not buildable for and does not support the Android
target. Simply deleting the file permanently can cause data loss, so
disable this feature on Android for now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ readme = "readme.md"
 [dependencies]
 arguably = "2.2.0"
 edit = "0.1.4"
-trash = "3.0.1"
 rand = "0.8.5"
 colored = "2.0"
+
+[target.'cfg(not(target_os = "android"))'.dependencies]
+trash = "3.0.1"
